# optTrajectories

./: .gitignore  CMakeLists.txt  Example.cpp  FirSmoother.cpp  FirSmoother.h  JerkFilter.cpp  JerkFilter.h  JerkSmoothingDemo.cpp  JerkSmoothingEvaluation.md  TOTG_jerk_smoothing_guide.md  Test.cpp  Trajectory.cpp  Trajectory.h  jerk_demo_output.txt  markdown.md
Eigen/: Core  Geometry
tests/: SmootherTest.cpp
